--- a/backend/package.json
+++ b/backend/package.json
@@ -6,21 +6,25 @@
   "scripts": {
     "test": "jest",
     "build": "rimraf dist && node build.js",
-    "start": "ts-node src/handlers/hello.ts"
+    "start": "ts-node src/handlers/hello.ts",
+    "start:local": "nodemon --watch src --exec ts-node ./src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@movie-nerd/shared": "workspace:*",
-    "aws-sdk": "^2.1691.0"
+    "aws-sdk": "^2.1691.0",
+    "express": "^4.21.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.8",
     "esbuild": "^0.24.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
