--- a/backend/package.json
+++ b/backend/package.json
@@ -15,14 +15,16 @@
   "dependencies": {
     "@movie-nerd/shared": "workspace:*",
     "aws-sdk": "^2.1691.0",
-    "express": "^4.21.1"
+    "mongodb": "4.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.8",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
+    "express": "^4.21.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
