--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "@movie-nerd/backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,9 +19,11 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
     "express": "^4.21.1",
