--- a/cdk-stack/package.json
+++ b/cdk-stack/package.json
@@ -11,6 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@movie-nerd/backend": "workspace:*",
     "@types/jest": "^29.5.12",
     "@types/node": "20.11.30",
     "aws-cdk": "2.135.0",
@@ -22,6 +23,8 @@
   "dependencies": {
     "aws-cdk-lib": "2.135.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "esbuild": "^0.24.0",
     "source-map-support": "^0.5.21"
   }
 }
