--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend": "pnpm --filter backend run start:local"
+    "backend": "pnpm --filter backend run start:local",
+    "format": "prettier --write '**/*.{ts,tsx,js,jsx,json,css,scss,md}'",
+    "format:check": "prettier --check '**/*.{ts,tsx,js,jsx,json,css,scss,md}'"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.4.2"
+  }
 }
