--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "backend": "pnpm --filter backend run start:local",
     "frontend": "pnpm --filter frontend run dev",
+    "frontend:build": "pnpm --filter frontend run build",
     "format": "prettier --write '**/*.{ts,tsx,js,jsx,json,css,scss,md}'",
     "format:check": "prettier --check '**/*.{ts,tsx,js,jsx,json,css,scss,md}'"
   },
