--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@movie-nerd/shared": "workspace:*",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "i18next": "^24.1.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
