--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,7 @@ jobs:
     name: Deploy to AWS
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/main')
 
     steps:
       - name: Checkout Code
